# playere

./: .env  Cargo.toml  LICENSE  Makefile  README.md  build-release.ps1  build-release.sh  debug-crash.sh  install.sh  print_out_dir  print_out_dir.rs  run.sh  tauri.conf.json  test-app.sh
src/: main.rs
